force-app/main/default/objects/Lane_User__c/Lane_User__c.object-meta.xml
<CustomObject>
    <label>Swim Lane User</label>
    <nameField>
        <displayFormat>LU-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Swim Lane Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>