force-app/main/default/objects/Lane_User__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this is checked, a Swim Lane user can access this Swim Lane.</description>
    <inlineHelpText>When this is checked, a Swim Lane user can access this Swim Lane.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>