force-app/main/default/objects/Lane_User__c/fields/Lane__c.field-meta.xml
<CustomField>
    <fullName>Lane__c</fullName>
    <label>Lane</label>
    <referenceTo>Lane__c</referenceTo>
    <relationshipLabel>Lane Users</relationshipLabel>
    <relationshipName>Lane_Users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>